# libfar-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: farlib.rs  lib.rs
